--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,6 +12,7 @@
         <div class="checkbox mb-3">You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
     {% endif %}
 
+<a href="/"><img src="/images/logo.jpg"></a>
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputLogin" class="sr-only">Login</label>
