--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -2,17 +2,15 @@
 
 {% block title %}C&eacute;nacle R&eacute;mi Mollet{% endblock %}
 
-
 {% block stylesheets %}
-<link href="/assets/home/home.css" rel="stylesheet">
+<link href="/assets/base/base.css" rel="stylesheet">
 {% endblock %}
 
 
 {% block body %}
-
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
 	<a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
-	<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+	<input class="form-control form-control-dark w-100" type="text" placeholder="Rechercher" aria-label="Rechercher">
 	<ul class="navbar-nav px-3">
 		<li class="nav-item text-nowrap">
 			<a class="nav-link" href="#">Sign out</a>
