--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -9,7 +9,7 @@
 
 {% block body %}
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-	<a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
+	<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="{{ path('home') }}"><img src="/assets/img/logo.png" style="max-height:32px" /></a>
 	<input class="form-control form-control-dark w-100" type="text" placeholder="Rechercher" aria-label="Rechercher">
 	<ul class="navbar-nav px-3">
 		<li class="nav-item text-nowrap">
@@ -27,78 +27,44 @@
 						<a class="nav-link active" href="#">
 							<span data-feather="home"></span>
 							Dashboard <span class="sr-only">(current)</span>
+							{#{ menuItems }#}
 						</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">
-							<span data-feather="globe"></span>
-							Clubs
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">
-							<span data-feather="book"></span>
-							Documents
-						</a>
-					</li>
-					
+					{{ render(controller('App\\Controller\\MenuLeftController::viewMenuLeft')) }}
+				</ul>
+			</div>
+		</nav>
 
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="shopping-cart"></span>
-                  Products
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="users"></span>
-                  Customers
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="bar-chart-2"></span>
-                  Reports
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="layers"></span>
-                  Integrations
-                </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+		<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+			<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+				<h1 class="h2">Dashboard</h1>
+				<div class="btn-toolbar mb-2 mb-md-0">
+					<div class="btn-group mr-2">
+						<button class="btn btn-sm btn-outline-secondary">Share</button>
+						<button class="btn btn-sm btn-outline-secondary">Export</button>
+					</div>
+					<button class="btn btn-sm btn-outline-secondary dropdown-toggle">
+						<span data-feather="calendar"></span>
+						This week
+					</button>
+				</div>
+			</div>
+		</main>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-            <div class="btn-toolbar mb-2 mb-md-0">
-              <div class="btn-group mr-2">
-                <button class="btn btn-sm btn-outline-secondary">Share</button>
-                <button class="btn btn-sm btn-outline-secondary">Export</button>
-              </div>
-              <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                <span data-feather="calendar"></span>
-                This week
-              </button>
-            </div>
-          </div>
-        </main>
-      </div>
-    </div>
+	</div>
+</div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/vendor/jquery/jquery-3.2.1.slim.min.js"></script>
-    <script src="/vendor/popper/popper.min.js"></script>
-    <script src="/vendor/bootstrap/bootstrap.min.js"></script>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="/vendor/jquery/jquery-3.2.1.slim.min.js"></script>
+<script src="/vendor/popper/popper.min.js"></script>
+<script src="/vendor/bootstrap/bootstrap.min.js"></script>
 
-    <!-- Icons -->
-    <script src="/vendor/feather/feather.min.js"></script>
-    <script>
-      feather.replace()
-    </script>
+<!-- Icons -->
+<script src="/vendor/feather/feather.min.js"></script>
+<script>
+  feather.replace()
+</script>
+
 {% endblock %}
