--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -42,7 +42,15 @@
 
 		<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4" style="padding-top: 56px !important;">
 			<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-				<h1 class="h2">Dashboard</h1>
+				{% block dashboardcontent %}{% endblock %}
+
+				{#{% if blockName is empty %}
+					1 pas block name
+				{% else %}
+					{{ include(templateName) }}
+				{% endif %} #}
+				
+				{#<h1 class="h2">Dashboard</h1>
 				<div class="btn-toolbar mb-2 mb-md-0">
 					<div class="btn-group mr-2">
 						<button class="btn btn-sm btn-outline-secondary">Share</button>
@@ -52,7 +60,7 @@
 						<span data-feather="calendar"></span>
 						This week
 					</button>
-				</div>
+				</div>#}
 			</div>
 		</main>
 
