--- a/templates/clubs.html.twig
+++ b/templates/clubs.html.twig
@@ -5,21 +5,19 @@
 <table class="table">
 	<thead>
 		<tr>
-			{#<th scope="col">{% trans %}Name{% endtrans %}</th>
+			<th scope="col">{% trans %}Name{% endtrans %}</th>
 			<th scope="col">{% trans %}County{% endtrans %}</th>
-			<th scope="col">{% trans %}City{% endtrans %}</th>#}
-			<th scope="col">Name</th>
-			<th scope="col">County</th>
-			<th scope="col">City</th>
+			<th scope="col">{% trans %}City{% endtrans %}</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr>
-			<th scope="row">1</th>
-			<td>Mark</td>
-			<td>Otto</td>
-			<td>@mdo</td>
-		</tr>
+		{% for club in clubs %}
+			<tr>
+				<th scope="row">{{ club.getName() }}</th>
+				<td>TODO</td>
+				<td>TODO</td>
+			</tr>
+		{% endfor %}
 	</tbody>
 </table>
 
