--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,9 @@
 		<link rel="icon" href="/favicon.ico">
 		<title>{% block title %}{% endblock %}</title>
 		<link href="/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
-		<link href="/assets/base/base.css" rel="stylesheet">
+		<link href="/assets/dashboard/dashboard.css" rel="stylesheet">
+		<link href="/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" rel="stylesheet">
+		<!--<link href="style2.css" rel="stylesheet">-->
 		{% block stylesheets %}{% endblock %}
 	</head>
 	<body>
