--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -8,76 +8,90 @@
 
 
 {% block body %}
+
+<nav id="sidebar">
+	<div class="sidebar-header">
+		<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="{{ path('home') }}"><img src="/assets/img/logo.png" style="max-height:70px" /></a>
+	</div>
+	<ul class="list-unstyled components">
+		{{ render(controller('App\\Controller\\MenuLeftController::viewMenuLeft')) }}
+	</ul>
+</nav>
+        
+{#
+
+
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0">
 	<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="{{ path('home') }}"><img src="/assets/img/logo.png" style="max-height:32px" /></a>
 	<input class="form-control form-control-dark w-100" type="text" placeholder="Rechercher" aria-label="Rechercher">
 	<ul class="navbar-nav px-3">
 		<li class="nav-item text-nowrap">
 			{% if user == null %}
-				<a class="nav-link" href="/login">{% trans %}Sign in{% endtrans %}</a>
+				<h3><a class="nav-link" href="/login">{% trans %}Sign in{% endtrans %}</a></h3>
 			{% else %}
-				<a class="nav-link" href="/logout">{% trans %}Sign out{% endtrans %}</a>
+				<h3><a class="nav-link" href="/logout">{% trans %}Sign out{% endtrans %}</a></h3>
 			{% endif %}
 		</li>
 	</ul>
 </nav>
+ 
+    <nav class="navbar navbar-light bg-light navbar-expand-lg"> 
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        	<span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- appeler le logo apres le bouton -->
+        <a class="navbar-brand" href="#">Logo</a>
+        
+        <!-- suite du menu -->
+    </nav>
+  #}  
 
-<div class="container-fluid h-100">
-	<div class="row h-100">
-		<nav class="col-md-2 d-none d-md-block bg-light sidebar" style="padding-top: 46px;">
-			<div class="sidebar-sticky">
-				<div style="position:relative;z-index:1">
-					<ul class="nav flex-column">
-						{#<li class="nav-item">
-							<a class="nav-link active" href="#">
-								<span data-feather="home"></span>
-								Dashboard <span class="sr-only">(current)</span>
-							</a>
-						</li> #}
-						{{ render(controller('App\\Controller\\MenuLeftController::viewMenuLeft')) }}
-					</ul>
-				</div>
-			</div>
-		</nav>
+<div id="content">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+				<button type="button" id="sidebarCollapse" class="btn btn-info">
+				<i class="fas fa-align-left"></i>
+				<span data-feather="menu"></span>
+			</button>
+			<input class="form-control form-control-dark" type="text" placeholder="Rechercher" aria-label="Rechercher">
+			<ul class="navbar-nav px-3">
+				<li class="nav-item text-nowrap">
+					{% if user == null %}
+						<h5><a class="nav-link" href="/login">{% trans %}Sign in{% endtrans %}</a></h5>
+					{% else %}
+						<h5><a class="nav-link" href="/logout">{% trans %}Sign out{% endtrans %}</a></h5>
+					{% endif %}
+				</li>
+			</ul>
+		</div>
+	</nav>
 
-		<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4" style="padding-top: 56px !important;">
-			<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-				{% block dashboardcontent %}{% endblock %}
-
-				{#{% if blockName is empty %}
-					1 pas block name
-				{% else %}
-					{{ include(templateName) }}
-				{% endif %} #}
-				
-				{#<h1 class="h2">Dashboard</h1>
-				<div class="btn-toolbar mb-2 mb-md-0">
-					<div class="btn-group mr-2">
-						<button class="btn btn-sm btn-outline-secondary">Share</button>
-						<button class="btn btn-sm btn-outline-secondary">Export</button>
-					</div>
-					<button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-						<span data-feather="calendar"></span>
-						This week
-					</button>
-				</div>#}
-			</div>
-		</main>
-
+	<div>
+		{% block dashboardcontent %}{% endblock %}
 	</div>
+
+
 </div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
+
 <script src="/vendor/jquery/jquery-3.2.1.slim.min.js"></script>
 <script src="/vendor/popper/popper.min.js"></script>
 <script src="/vendor/bootstrap/bootstrap.min.js"></script>
-
-<!-- Icons -->
+<script src="/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="/vendor/feather/feather.min.js"></script>
-<script>
-  feather.replace()
+<script type="text/javascript">
+	feather.replace();
+	$(document).ready(function () {
+		$("#sidebar").mCustomScrollbar({
+			theme: "minimal"
+		});
+
+	$('#sidebarCollapse').on('click', function () {
+		$('#sidebar, #content').toggleClass('active');
+			$('.collapse.in').toggleClass('in');
+			$('a[aria-expanded=true]').attr('aria-expanded', 'false');
+		});
+	});
 </script>
 
 {% endblock %}
