--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -92,5 +92,6 @@
 			});
 		});
 	</script>
+	<script src="/vendor/jquery.serializeobject/jquery.serializeObject.min.js"></script>
 {% endblock %}
 
