--- a/templates/students.html.twig
+++ b/templates/students.html.twig
@@ -24,15 +24,18 @@
 						<form id="student_form" action="/student" method="POST" class="needs-validation" novalidate>
 							<div class="row">
 								<div class="col"> {# <!-- ========= lastname ========= --> #}
-									<input type="text" name="lastname" class="form-control" placeholder="{% trans %}Lastname{% endtrans %}">
+									<input type="text" name="lastname" class="form-control" placeholder="{% trans %}Lastname{% endtrans %}" required>
+									<div class="invalid-feedback">invalid</div>
 								</div>
 								<div class="col"> {# <!-- ========= firstname ========= --> #}
-									<input type="text" name="firstname" class="form-control" placeholder="{% trans %}Firstname{% endtrans %}">
+									<input type="text" name="firstname" class="form-control" placeholder="{% trans %}Firstname{% endtrans %}" required>
+									<div class="invalid-feedback">invalid</div>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col"> {# <!-- ========= birthday ========= --> #}
-									<input type="text" name="birthday" class="form-control" id="birthday-name" placeholder="{% trans %}Birthday{% endtrans %}">
+									<input type="text" name="birthday" class="form-control" id="birthday-name" placeholder="{% trans %}Birthday{% endtrans %}" required>
+									<div class="invalid-feedback">invalid</div>
 								</div>
 								<div class="col"> {# <!-- ========= sex ========= --> #}
     								<div class="btn-group btn-group-toggle" data-toggle="buttons">
@@ -43,35 +46,10 @@
     										<input type="radio" name="options" id="sex_male" autocomplete="off"> {% trans %}Male{% endtrans %}
     									</label>
     								</div>
+    								<div class="invalid-feedback">invalid</div>
 								</div>
 							</div>
-									
-	
-	                        {# <!-- ========= lastname ========= --> #}
-							{# <div class="row">
-								<label for="lastname-name" class="col-sm-2 col-form-label">{% trans %}Lastname{% endtrans %}</label>
-								<input type="text" name="lastname" class="form-control col-sm-10" id="lastname-name">
-								<div class="valid-feedback">Looks good!</div>
-							</div> #}
-							{# <!-- ========= firstname ========= --> #}
-							{# <div class="row">
-								<label for="firstname-name" class="col-sm-2 col-form-label">{% trans %}Firstname{% endtrans %}</label>
-								<input type="text" name="firstname" class="form-control col-sm-10" id="firstname-name">
-							</div> #}
-							{# <!-- ========= birthday ========= --> #}
-							{# <div class="row">
-								<label for="birthday-name" class="col-sm-2 col-form-label">{% trans %}Birthday{% endtrans %}</label>
-								<input type="text" name="birthday" class="form-control col-sm-4" id="birthday-name"> #}
-								{# <!-- ========= sex ========= --> #}
-								{# <div class="btn-group btn-group-toggle" data-toggle="buttons">
-									<label class="btn btn-secondary">
-										<input type="radio" name="options" id="sex_female" autocomplete="off"> {% trans %}Female{% endtrans %}
-									</label>
-									<label class="btn btn-secondary">
-										<input type="radio" name="options" id="sex_male" autocomplete="off"> {% trans %}Male{% endtrans %}
-									</label>
-								</div>
-							</div> #}
+
 						</form>
 					</div>
 					<div class="modal-footer">
