--- a/templates/students.html.twig
+++ b/templates/students.html.twig
@@ -12,10 +12,13 @@
 		<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createStudentModal">{% trans %}Add{% endtrans %}</button>
 
 		<div class="modal fade" id="createStudentModal" tabindex="-1" role="dialog" aria-labelledby="createStudentModalLabel" aria-hidden="true">
-			<div class="modal-dialog" role="document">
+			<div class="modal-dialog modal-dialog-scrollable" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title" id="createStudentModalLabel">{% trans %}New student{% endtrans %}</h5>
+						<h5 class="modal-title" id="createStudentModalLabel" style="white-space: nowrap;">{% trans %}New student{% endtrans %}</h5>
+						<div id="created_message" style="padding: 5px; color: #2a9225;display:none;">{% trans %}Student created{% endtrans %} :
+							<span id="name_created"></span>
+						</div>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
@@ -25,36 +28,73 @@
 							<div class="row">
 								<div class="col"> {# <!-- ========= lastname ========= --> #}
 									<input type="text" name="lastname" class="form-control" placeholder="{% trans %}Lastname{% endtrans %}" required>
-									<div class="invalid-feedback">invalid</div>
+									<div class="invalid-feedback"></div>
 								</div>
 								<div class="col"> {# <!-- ========= firstname ========= --> #}
 									<input type="text" name="firstname" class="form-control" placeholder="{% trans %}Firstname{% endtrans %}" required>
-									<div class="invalid-feedback">invalid</div>
+									<div class="invalid-feedback"></div>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col"> {# <!-- ========= birthday ========= --> #}
 									<input type="text" name="birthday" class="form-control" id="birthday-name" placeholder="{% trans %}Birthday{% endtrans %}" required>
-									<div class="invalid-feedback">invalid</div>
+									<div class="invalid-feedback"></div>
 								</div>
 								<div class="col"> {# <!-- ========= sex ========= --> #}
     								<div class="btn-group btn-group-toggle" data-toggle="buttons">
     									<label class="btn btn-secondary">
-    										<input type="radio" name="options" id="sex_female" autocomplete="off"> {% trans %}Female{% endtrans %}
+    										<input type="radio" name="sex" id="sex_female" autocomplete="off" value="F"> {% trans %}Female{% endtrans %}
     									</label>
     									<label class="btn btn-secondary">
-    										<input type="radio" name="options" id="sex_male" autocomplete="off"> {% trans %}Male{% endtrans %}
+    										<input type="radio" name="sex" id="sex_male" autocomplete="off" value="M"> {% trans %}Male{% endtrans %}
     									</label>
     								</div>
-    								<div class="invalid-feedback">invalid</div>
+    								<div class="invalid-feedback"></div>
 								</div>
 							</div>
-
+							<div class="row"> {# <!-- ========= address ========= --> #}
+								<div class="col">
+    								<input type="text" name="address" class="form-control" placeholder="{% trans %}Address{% endtrans %}" required>
+    								<div class="invalid-feedback"></div>
+    							</div>
+							</div>
+							<div class="row">
+								<div class="col"> {# <!-- ========= zipcode ========= --> #}
+									<input type="text" name="zipcode" class="form-control" placeholder="{% trans %}Zipcode{% endtrans %}" required>
+									<div class="invalid-feedback"></div>
+								</div>
+								<div class="col"> {# <!-- ========= city ========= --> #}
+									<input type="text" name="city" class="form-control" placeholder="{% trans %}City{% endtrans %}" required>
+									<div class="invalid-feedback"></div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col"> {# <!-- ========= phone ========= --> #}
+									<input type="text" name="phone" class="form-control" placeholder="{% trans %}Phone{% endtrans %}" required>
+									<div class="invalid-feedback"></div>
+								</div>
+								<div class="col"> {# <!-- ========= phone_emergency ========= --> #}
+									<input type="text" name="phone_emergency" class="form-control" placeholder="{% trans %}Phone emergency{% endtrans %}" required>
+									<div class="invalid-feedback"></div>
+								</div>
+							</div>
+							<div class="row"> {# <!-- ========= nationality ========= --> #}
+								<div class="col">
+    								<input type="text" name="nationality" class="form-control" placeholder="{% trans %}Nationality{% endtrans %}" required>
+    								<div class="invalid-feedback"></div>
+    							</div>
+							</div>
+							<div class="row"> {# <!-- ========= emails ========= --> #}
+								<div class="col">
+    								<input type="text" name="mails" class="form-control" placeholder="{% trans %}Emails{% endtrans %}" required>
+    								<div class="invalid-feedback"></div>
+    							</div>
+							</div>
 						</form>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans %}Close{% endtrans %}</button>
-						<button type="button" class="btn btn-primary">{% trans %}Create{% endtrans %}</button>
+						{#<button id="submitCreate" type="button" class="btn btn-primary">{% trans %}Create{% endtrans %}</button>#}
 						<button id="submitCreateAndAddNew" type="button" class="btn btn-primary">{% trans %}Create and add new{% endtrans %}</button>
 					</div>
 				</div>
@@ -96,9 +136,12 @@
 		maxDate.setFullYear(maxDate.getFullYear() - 2);
 		var minDate = new Date();
 		minDate.setFullYear(minDate.getFullYear() - 100);
+		var startDate = new Date();
+		startDate.setFullYear(startDate.getFullYear() - 10);
 		$('#birthday-name').datepicker({
 			startDate: minDate,
 			endDate: maxDate,
+			defaultViewDate: startDate,
 			language: 'fr',
 			calendarWeeks: true
     });
