--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -8,10 +8,10 @@
 	{% endif %}
 
 	{% if app.user %}
-		<div class="checkbox mb-3">You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+		<div class="checkbox mb-3">{% trans %}You are logged in as{% endtrans %} {{ app.user.username }}, <a href="{{ path('app_logout') }}">{% trans %}Logout{% endtrans %}</a>
 	{% endif %}
 
-	<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+	<h1 class="h3 mb-3 font-weight-normal">{% trans %}Please sign in{% endtrans %}</h1>
 	<label for="inputLogin" class="sr-only">{% trans %}Login{% endtrans %}</label>
 	<input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" placeholder="{% trans %}Login{% endtrans %}" required autofocus>
 	<label for="inputPassword" class="sr-only">{% trans %}Password{% endtrans %}</label>
