--- a/templates/students.html.twig
+++ b/templates/students.html.twig
@@ -24,7 +24,7 @@
 						</button>
 					</div>
 					<div class="modal-body" id="student_dialog">
-						<form id="student_form" action="/student" method="POST" class="needs-validation" novalidate>
+						<form id="student_form" action="/api/user" method="POST" class="needs-validation" novalidate>
 							<div class="row">
 								<div class="col"> {# <!-- ========= lastname ========= --> #}
 									<input type="text" name="lastname" class="form-control" placeholder="{% trans %}Lastname{% endtrans %}" required>
