--- a/templates/users.html.twig
+++ b/templates/users.html.twig
@@ -113,10 +113,10 @@
 			</tr>
 		</thead>
 		<tbody>
-			{% for student in students %}
+			{% for user in users %}
 				<tr>
-					<th scope="row">{{ student.lastname }}</th>
-					<td>{{ student.firstname }}</td>
+					<th scope="row">{{ user.lastname }}</th>
+					<td>{{ user.firstname }}</td>
 				</tr>
 			{% endfor %}
 		</tbody>
