--- a/templates/users.html.twig
+++ b/templates/users.html.twig
@@ -3,6 +3,7 @@
 
 {% block stylesheets2 %}
 	<link href="/vendor/bootstrap-datepicker/bootstrap-datepicker.css" rel="stylesheet">
+	<link href="/assets/users/users.css" rel="stylesheet">
 {% endblock %}
 
 
@@ -105,7 +106,7 @@
 		<br/>
 	{% endif %}
 
-	<table class="table">
+	<table class="table clickable" id="table-users">
 		<thead>
 			<tr>
 				<th scope="col">{% trans %}Lastname{% endtrans %}</th>
@@ -114,7 +115,7 @@
 		</thead>
 		<tbody>
 			{% for user in users %}
-				<tr>
+				<tr id="{{ user.uuid }}">
 					<th scope="row">{{ user.lastname }}</th>
 					<td>{{ user.firstname }}</td>
 				</tr>
@@ -144,7 +145,9 @@
 			defaultViewDate: startDate,
 			language: 'fr',
 			calendarWeeks: true
-    });
+    	});
+
+
 	</script>
-	<script src="/assets/students/students.js"></script>
+	<script src="/assets/users/users.js"></script>
 {% endblock %}
