--- a/templates/menuleft.html.twig
+++ b/templates/menuleft.html.twig
@@ -2,7 +2,7 @@
 	
 	{% if menuItem.code == 'clubs' %}
 		<li class="nav-item">
-			<a class="nav-link" href="/clubs">
+			<a class="nav-link" href="/club">
 				<span data-feather="globe"></span>
 				{% trans %}Clubs{% endtrans %}
 			</a>
