--- a/templates/menuleft.html.twig
+++ b/templates/menuleft.html.twig
@@ -3,7 +3,7 @@
 	{% if menuItem.code == 'clubs' %}
 		<li class="nav-item">
 			<a class="nav-link" href="/club">
-				<span data-feather="globe"></span>
+				<span data-feather="home"></span>
 				{% trans %}Clubs{% endtrans %}
 			</a>
 		</li>
