--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -49,7 +49,11 @@
 					<i class="fas fa-align-left"></i>
 					<span data-feather="menu"></span>
 				</button>
-				<input class="form-control form-control-dark" type="text" placeholder="Rechercher" aria-label="Rechercher">
+				<input class="form-control form-control-dark"
+				       id="search-text"
+				       type="text" placeholder="{% trans %}Search{% endtrans %}"
+				       aria-label="{% trans %}Search{% endtrans %}"
+				       {% if searchResult is defined%}value="{{ searchResult.q }}"{% endif %}>
 				<ul class="navbar-nav px-3">
 					<li class="nav-item text-nowrap">
 						{% if connectedUser is defined and connectedUser != null %}
@@ -93,5 +97,6 @@
 		});
 	</script>
 	<script src="/vendor/jquery.serializeobject/jquery.serializeObject.min.js"></script>
+	<script src="/assets/dashboard/dashboard.js"></script>
 {% endblock %}
 
