--- a/templates/users.html.twig
+++ b/templates/users.html.twig
@@ -17,7 +17,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="createStudentModalLabel" style="white-space: nowrap;">{% trans %}New student{% endtrans %}</h5>
-						<div id="created_message" style="padding: 5px; color: #2a9225;display:none;">{% trans %}Student created{% endtrans %} :
+						<div id="created_message" style="padding: 5px; color: #2a9225;display:none;">{% trans %}User created{% endtrans %} :
 							<span id="name_created"></span>
 						</div>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
